--- a/Slak/22.md
+++ b/Slak/22.md
@@ -1,11 +1,17 @@
 
 # Chapter XXII 
 
-## Augustine on magic.
+## Augustine on magic
 
-### Date and influence of Augustine.
+Aurelius Augustinus was born in 354 in Tagaste (modern-day Souk Ahras, Algeria) to a Christian mother and a pagan father, raised in Roman north Africa, educated in Carthage, and employed as a professor of rhetoric in Milan by 383. He followed the Manichaean religion in his student days, and was converted to Christianity by the preaching and example of Ambrose of Milan. He was baptized at Pascha in 387, and returned to north Africa and created a monastic foundation at Tagaste for himself and a group of friends. In 391 he was ordained a priest in Hippo Regius (now Annaba, in Algeria). He became a famous preacher (more than 350 preserved sermons are believed to be authentic), and was noted for combatting the Manichaean heresy.
 
-The utterances of Augustine [^505:0] concerning magic and astrology have been reserved for separate treatment in this tine. chapter, partly because of his late date, 354 to 430 A.D., partly because of the voluminousness of his writings, but especially because of his approach to and influence upon the thought of the middle ages. It is, moreover, in his epoch-making book,  
+In 396 he was made coadjutor bishop of Hippo (assistant with the right of succession on the death of the current bishop), and remained as bishop in Hippo until his death in 430. He left his monastery, but continued to lead a monastic life in the episcopal residence. He left a Rule (Regula in Latin) for his monastery that has led him to be designated the "patron saint of Regular Clergy," that is, parish clergy who live by a monastic rule.
+
+Augustine died on August 28, 430, during the siege of Hippo by the Vandals. He is said to have encouraged its citizens to resist the attacks, primarily on the grounds that the Vandals adhered to heretical Arian Christianity. 
+
+### Date and influence of Augustine
+
+The utterances of Augustine [^505:0] concerning magic and astrology have been reserved for separate treatment in this chapter, partly because of his late date, 354 to 430 A.D., partly because of the voluminousness of his writings, but especially because of his approach to and influence upon the thought of the middle ages. It is, moreover, in his epoch-making book,  
 
  [^505:0]: Saint Augustine of Hippo (13 November 354 – 28 August 430 AD) was a Roman African, early Christian theologian and philosopher from Numidia whose writings influenced the development of Western Christianity and Western philosophy. He was the bishop of Hippo Regius in north Africa and is viewed as one of the most important Church Fathers in Western Christianity for his writings in the Patristic Period. Among his most important works are _The City of God, De doctrina Christiana_ and _Confessions_. 
 
@@ -14,7 +20,7 @@ Of Augustine's discussion of the Biblical account of creation in his _Confession
 
  [^505:1]: Duhem, II (1914), 314, seems to me to have over-estimated the significance of _Confessions_, V, 5, and _De Genesi_ ad litteram, I, 19, in saying, "L'assurance avec laquelle les Basile, les Gregoire de Nysse, les Ambroise, les Jean Chrysostome opposaient aux enseignements de la Physique profane les naives assertions de leur science puerile contristait fort rfiveque de Hippone." There is nothing, I think, to indicate that Augustine had these men or men of their stamp in mind, and I doubt if his scientific attainments were superior to Basil's. 
 
-### Christianity and magic.
+### Christianity and magic
  
 Even though writing in the fifth century Augustine still finds it necessary to defend Christ against those who imagine that He has converted peoples to Himself by means of the magic art. [^505:2] 
 
@@ -37,7 +43,7 @@ He admits, however, that condemnation of magic and legislation against it had be
 
  [^505:6]: _De civ. Dei_, VIII, 19.
 
-### Censure of magic and theurgy as well as _Goetia_.
+### Censure of magic and theurgy as well as Goetia
 
 Augustine uniformly speaks of magic with censure and several times adverts to "the crimes of magicians." [^505:7] 
 
@@ -54,7 +60,7 @@ He stoutly denies that
 
 Very possibly Augustine would have classed as improper theurgy some of the use of powerful names described by Origen.
 
-### Magic due to demons.
+### Magic due to demons
 
 At any rate Augustine declares that theurgists and sorcerers alike 
 
@@ -66,7 +72,7 @@ For it is to demons that Augustine, like most of our Christian writers, attribut
 
  [^506:4]: _De civ. Dei_, XXI, 6. 
 
-### Marvels wrought by magic.
+### Marvels wrought by magic
 
 But when once the demons have revealed their secrets, henceforth the charms of the magic art have efficacy. Of the marvels worked by means of magic Augustine has little doubt; to deny them would indeed in his opinion be to deny the truth of the Scriptures, to whose accounts of Pharaoh's magicians, [^506:5] the witch of Endor, and the Magi and the star, he adverts many times in his various works. 
 
@@ -75,7 +81,7 @@ But when once the demons have revealed their secrets, henceforth the charms of t
 If actors in the theater and performers in spectacles are able by art and exercise to display astounding alterations in the appearance of their earthly bodies, why may not the demons with their aerial bodies produce marvelous changes in elementary substances or by occult influence construct phantom images to delude human senses? [^507:1]   
 Augustine even grants that the magicians are able to terrify the inferior spirits into obedience to their commands by adjuring them by the names of superior spirits, and thereby with divine permission 
 
- [^507:1]: _De trinitate_, IV, 11. 
+ [^507:1]: _De trinitate_, IV,11. 
 
 "to exhibit to the eye of sense certain results which seem great and marvelous to men who through weakness of the flesh are incapable of beholding things eternal." 
 
@@ -83,7 +89,7 @@ He does not regard this as inconsistent with the assertion of Jesus that Satan c
 
  [^507:2]: _De diversis quaestionibus_, cap. 79; Migne, PL 40, 92-3. 
 
-### Cannot be equalled by most Christians.
+### Cannot be equalled by most Christians
 
 Augustine further grants that magicians, although stained with crime, can at present work miracles which most Christians and even most saints cannot perform. For this, however, he finds Scriptural precedent. Pharaoh's magicians performed feats which none of the Children of Israel could equal except Moses who excelled them by divine aid. Augustine, like earlier fathers, usually fails to mention Aaron in this connection. [^507:3] 
 
@@ -93,13 +99,13 @@ This superiority of magicians to most Christians in working marvels Augustine be
 
  [^507:4]: _De civ. Dei_, XXI, 6; XVIII, 
 
-### Miracles of heretics.
+### Miracles of heretics
 
 Like Origen, Augustine further distinguishes the miracles wrought by heretics both from magic and from the miracles of true Christians. He holds that every soul in part controls itself and exercises as it were a private jurisdiction, in part is subject to the laws of the universe just as any citizen is amenable to public jurisdiction. Therefore magicians perform their marvels by private contracts with demons; good Christians perform theirs by public justice; bad Christians perform theirs by the appearance or signs of public justice. [^508:1] This view would seem to indicate that God, like the demons, regards the signs alone and not the character and purpose of the performer, so that Christian miracles, if they can be duplicated by heretics, would appear to be largely a matter of procedure and art, like magic. 
 
  [^508:1]: De diversis quaestionibus, cap. 79; De doctrina Christiana, II, 20, in Migne, PL 34, 50. 875. 
 
-### Theory of demons.
+### Theory of demons
  
 For his theory of demons and their characteristics Augustine seems largely indebted to Apuleius, whom he cites in several chapters of the eighth and ninth books of _The City of God_. In his separate treatise, _The Divination of Demons_, [^508:2] he explains their ability to predict the future and to perform marvels by the keenness of their sense, their rapidity of movement, their long experience of nature and life, and the subtlety of their aerial bodies. 
 
@@ -109,7 +115,7 @@ This last quality enables them to penetrate human bodies or affect the thoughts 
 
  [^508:3]: _De trinitate_, III, 8; PL, 42 875. 
 
-### Limitations to the power of magic.
+### Limitations to the power of magic
 
 There were, for example, some things which Pharaoh's magicians could not do and in which Moses clearly excelled them. They were able to change their rods into snakes but his snake devoured theirs. How the magicians got their rods back, if at all, neither Augustine nor the Book of Exodus informs us. But whether with or without their magic wands, they were still able to duplicate one or two of the plagues sent upon Egypt. Augustine explains that neither they nor the demons who helped them really created snakes and frogs, but that there are certain seeds of life hidden away In the elemental bodies of this world of which they made use. But their magic failed them when it came to the reproduction of minute insects. [^509:1]
 
@@ -119,16 +125,15 @@ Augustine furthermore has some hesitation about accepting the stories of magic t
 
  [^509:2]: _De civitate Dei_, XVIII, 22. In commenting on Genesis (PL 34, 445) he speaks even more harshly of "that absurd and harmful notion of the changing of souls and of men into beasts, or of beasts into men"; but perhaps he has reference to the doctrine of transmigration of souls rather than to magic transformations. 
 
-### Its fantastic character.
+### Its fantastic character
 
 Thus, as we have already seen over and over again, the fantastic and deceptive character of magic is dimly realized. Usually, however, when Augustine represents "the powers of the air" as deceiving men by magic, the deceit consists merely in the magicians' imagining that they are working the marvels which are really performed by demons, or in men being lured into subjection to Satan and to their ultimate and eternal damnation through the attractions of the magic art. [^509:3] 
 
  [^509:3]:  _Confessions_, X, 42, in PL vol. 32. 
 
-### Samuel and the witch of Endor.
+### Samuel and the witch of Endor
 
-Augustine twice responded to questions concerning the Samuel 
-witch of Endor's apparent invocation of the spirit of Samuel, repeating in his _De octo Dulcitii quaestionibus_  [^510:1] 
+Augustine twice responded to questions concerning the Samuel witch of Endor's apparent invocation of the spirit of Samuel, repeating in his _De octo Dulcitii quaestionibus_  [^510:1] 
 
  [^510:1]: Qaaest. VI; PL 40, 162-5.
 
@@ -136,27 +141,27 @@ what he had already said in _De diversis quaestionibus ad Simplicianum_. [^510:2
 Augustine, however, also thinks it possible that the soul of Samuel did not appear but was impersonated by some phantasm and imaginary illusion made by diabolical machinations. He can see no deceit in the Scripture's calling such a phantom Samuel, since we are accustomed to call paintings, statues, and images seen in dreams by the names of the actual persons whom they represent. Nor does it trouble him that the spirit of Samuel or pretended spirit predicted truly to Saul, for demons have a limited power of that sort.  
 Thus they recognized Christ when the Jews knew Him not, and the damsel possessed of a spirit of divination in _The Acts_ testified to Paul's divine mission. Augustine leaves, however, as beyond the limits of his time and strength the further problem whether the human soul after death can be so evoked by magic incantations that it is not only seen but recognized by the living. In his answer to Dulcitius he further calls attention to the passage in _Ecclesiasticus_ (XLVI, 23) where Samuel is praised as prophesying from the dead. And if this passage be rejected because the book is not in the Hebrew canon, what shall we say of Moses who appeared to the living long after his death? 
 
-  [^510:2]: II, 3; PL 40, 142-4. 
+  [^510:2]: II,3; PL 40,142-4. 
 	
-### Natural marvels.
+### Natural marvels
 
 Augustine had some acquaintance with ancient natural science and in one passage rehearses a number of natural marvels which are found in the pages of Pliny and Solinus in order to show pagans their inconsistency in accepting such wonders and yet remaining incredulous in regard to analogous phenomena mentioned in the Bible. So  Augustine rehearses the strange properties of the magnet; asserts that adamant can be broken neither by steel nor fire but only by application of the blood of a goat; tells of Cappadocian mares who conceive from the wind; and hails the ability of the salamander to live in the midst of flames as a token that the bodies of sinners can subsist in hell fire. Augustine also admits 
 
 > "the virtue of stones and other objects and the craft of men who employ these in marvelous ways." [^511:1] 
 
- [^511:1]: _De civitate Dei_, XXI, 4-6; PL 41, 712-6. 
+ [^511:1]: _De civitate Dei_, XXI,4-6; PL 41,712-6. 
 
 He denies, however, that the Marsi who charm snakes by their incantations are really understood by the serpents. There is some diabolical force behind their magic, as when Satan spoke to Eve through the serpent. [^511:2] 
 
- [^511:2]: _De Genesi_ ad litteram, XI, 28- 9; PL 34, 444-5. 
+ [^511:2]: _De Genesi_ ad litteram, XI,28- 9; PL 34, 444-5. 
 
-### Relation between magic and science.
+### Relation between magic and science
 
 Once at least, however, Augustine associates science and magic. In his _Confessions_, after speaking of sensual pleasure he also censures "the vain and curious desire of investigation" through the senses, which is "palliated under the name of knowledge and science." This is apt to lead one not only into scrutinizing secrets of nature which are beyond one and which it does one no good to know and which men want to know just for the sake of knowledge, but also "into searching through magic arts into the confines of perverse science." [^511:3] 
 
  [^511:3]: _Confessions_, X, 35 ; in PL vol. 32. 
 
-### Superstitions akin to magic.
+### Superstitions akin to magic
 
 Of this dangerous borderland between magic and science Augustine has more to say in some chapters of his _Christian Doctrine_. [^511:4] 
 
@@ -166,7 +171,7 @@ After mentioning as prime instances of human superstition idolatry, other false 
 
  [^511:5]: IV. 2-3. 
 
-### Survival of pagan superstition among the laity.
+### Survival of pagan superstition among the laity
 
 The same attitude toward superstitious medicine is shown in a sermon attributed to Augustine but probably spurious. [^512:1] Here a tempter is represented as coming to the sick man and saying, "If you had only employed that enchanter, you would be well now; if you would attach these characters to your body, you could recover your health." Or another comes and says, "Send your girdle to that diviner ; he will measure and scrutinize it and tell you what to do and whether you can recover. Or a third visitor may recommend someone who is skilled in fumigation. The preacher warns his hearers not to succumb to such advice or they will be sacrificing to the devil; whereas if they refuse such treatment and die, it will be a glorious martyr's death. 
 
@@ -188,15 +193,15 @@ Nor will Augustine, to return to his remarks in the _Christian Doctrine_, [^513:
 
 He holds that they enslave human free will by predicting a man's character and life from the stars, and that their art is a presumptuous and fallacious human invention, and that if their predictions come true, this is due either to chance or to demons who wish to confirm mankind in its error. [^513:3] 
 
- [^513:3]:  _De civitate Dei_, V, 7. 
+ [^513:3]:  _De civitate Dei_, V,7. 
 
 In his youth, when a follower of the Manichean sect, Augustine had been a believer in astrology and thereby "sacrificed himself to demons" at the same time that, owing to his Manichean scruples against animal sacrifice, he refused to employ a _haruspex_. [^513:4] 
 
- [^513:4]:  _Confessions_, VII, 6
+ [^513:4]:  _Confessions_, VII,6
 
 Perhaps on this account he felt the more bound to warn his readers against astrology in his old age. He often attacks the casters of horoscopes in his works and especially in the opening chapters of the fifth book of _The City of God_, on which we may center our attention as being a rather more elaborate discussion than the other passages and including almost all the arguments which he advances elsewhere. These arguments are not original with him, but his presentation of them was perhaps better known in the middle ages than any other. [^514:1] 
 
- [^514:1]: Unless otherwise noted, the ensuing arguments are found in _The City of God_, V, 1-7. 
+ [^514:1]: Unless otherwise noted, the ensuing arguments are found in _The City of God_, V,1-7. 
 
 ### Fate and free will.
 
@@ -206,7 +211,7 @@ The objection to astrology as fatalistic does not come with the best grace from 
 
 Thus thwarted in his attempt to show that the astrologers enslave the human will, although in other passages he still gives us to understand that they do, [^514:2] Augustine adopts another line of argument, that from twins, an old favorite, which he twists first one way and then another, proposing to the astrologers a series of dilemmas as he finds them likely to escape from each preceding one. 
 
- [^514:2]: _De Genesi_ ad litteram, II, 17; PL 34, 278. _De diversis quaestionibus_, cap. 45; PL 40, 28-9. _Epistola_ 246; PL 33, 106t; _Sermo_ 109; PL 38, 1027. 
+ [^514:2]: _De Genesi_ ad litteram, II,17; PL 34, 278. _De diversis quaestionibus_, cap.45; PL 40, 28-9. _Epistola_ 246; PL 33, 106t; _Sermo_ 109; PL 38, 1027. 
 
 He seems to have been much impressed by the thought that at the same instant and hence with the same horoscope persons were born whose subsequent lives and characters were different. He brings forward Esau and Jacob as examples, and states that he himself has known of twins of dissimilar sex and life. Moreover, he tells us in his _Confessions_ that he was finally induced to abandon his study of the books of the astrologers, from which the arguments of "Vindicianus, a keen old man, and of Nebridius, a youth of remarkable intellect," had failed to win him, by hearing from another youth that his father, a man of wealth and rank, had been born at precisely the same moment as a certain wretched slave on the estate. [^515:1]  
 
@@ -221,16 +226,16 @@ But he does not recognize that very likely the astrologers would agree with him 
 
  [^516:1]: See below, chapter 24. 
 
-### Elections.
+### Elections
  
 With this Augustine turns from the case of twins to urge the inconsistency of the astrological doctrine of elections, suggested by the story of the sage who chose the favorable moment for intercourse with his wife. He holds that this practice of choosing favorable times is inconsistent with the belief in nativities which are supposed to have determined and predicted the individual's fate already. He also inquires why men choose certain days for setting out trees and shrubs or breeding animals, if men alone are subject to the constellations.  
 
-### Are animals and plants under the stars? 
+### Are animals and plants under the stars
 
 This last clause indicates how exclusively Augustine's attacks are directed against the prediction of man's life from the stars, and how little he has to say regarding the stars' control of the world of nature in general. He now goes on to consider this latter possibility, but interprets it too in the narrow sense of horoscope-casting, and as implying that every herb and beast must have its fate absolutely determined by the constellations at its moment of birth. This appears, however, to have been a widespread belief then, since he tells us that men are accustomed to test the skill of astrologers by submitting to them the horoscopes of dumb animals, and that the best astrologers are able not only to recognize that the reported constellations mark the birth of a beast rather than that of a human being, but also to state whether it was a horse, cow, dog, or sheep.  
-Nevertheless, Augustine feels that he has reduced the art of casting horoscopes to an absurdity, as he feels sure that beasts and plants which are so numerous must frequently be born at precisely the same instant as human beings. Furthermore, it is plain that crops which are sown and ripen simultaneously meet with very diverse fates in the end. Augustine thinks that by this argument he will force the astrologers to say that men alone are subject to the stars, and then he will triumphantly ask how this can be, when God has endowed man alone of all creatures with free will. Having thus argued more or less in a circle, Augustine regains the point from which he had started, or rather, retreated,
+Nevertheless, Augustine feels that he has reduced the art of casting horoscopes to an absurdity, as he feels sure that beasts and plants which are so numerous must frequently be born at precisely the same instant as human beings. Furthermore, it is plain that crops which are sown and ripen simultaneously meet with very diverse fates in the end. Augustine thinks that by this argument he will force the astrologers to say that men alone are subject to the stars, and then he will triumphantly ask how this can be, when God has endowed man alone of all creatures with free will. Having thus argued more or less in a circle, Augustine regains the point from which he had started, or rather, retreated.
  
-### Failure to disprove the control of nature by the stars.
+### Failure to disprove the control of nature by the stars
 
 Augustine cannot then be said to have advanced any telling arguments against some sort of control of inferior nature by the motions and influence of the heavenly bodies. He leaves the fundamental hypothesis of astrology unrebutted. His attention is concentrated upon genethlialogy, the superstition that the time and place of birth and nothing else determine with mathematical certainty and mechanical rigidity the entirety of one's life.  
 This seems nevertheless to have been a superstition which was very much alive in his time, which he felt he must take pains repeatedly to refute, and to which he himself had once been in bondage. But he could not have studied the books of the astrologers very deeply, as he ascribes views to them which many of them did not hold. Also he seems never to have read the _Tetrabihlos_ of Ptolemy. His attack upon and criticism of astrology was therefore narrow, partial, and inadequate, and did not prevent medieval men from devoting themselves to that subject, although they might cite his objections against ascribing to the constellations an influence subversive of human free will. But he cannot be said to have admitted the control of the stars over the world of nature.  
@@ -238,13 +243,15 @@ Apparently the most that he was willing to concede was that it was not absurd to
 
 ## Propheties
 
-### Natural divination and prophetic visions.
+Manicheanism. This false religion was started by a Persian prophet named Mani. He blended elements of occult Judaism, Zoroastrianism and Christianity and came up with a complicated New Age kind of religion. His core heresy was dualism. He taught that the physical world was evil and the spiritual world was good. Manicheanism had a huge influence in the 3-4 centuries.
+
+### Natural divination and prophetic visions
 
 In another work Augustine tells of some young men who, while traveling, as a boyish prank pretended to be astrologers and either by mere chance or by natural and innate power of divination hit upon the truth in the predictions which they supposed that they were inventing. In the same context he proceeds to discuss in a credulous way the possibility of marvelous prophetic visions, concerning which he tells one or two other tall tales from his personal experience. He is, however, doubtful how far the human soul itself possesses the power of divination, which he is inclined to attribute rather to spirits, good or bad. But owing to Satan's ability in disguising himself as an angel of light it is often very difficult to tell to which sort of spirit to ascribe the vision in question. [^518:1] 
 
  [^518:1]: _De Genesi_ ad litteram, XII, 22 and 17 and 12; PL 34, 472-3, 467-9, 464-5. See also the marvelous divinations of Albicerius recounted in _Contra Academicos_ I,6; PL 32, 914-5. 
 
-### The star at Christ's birth.
+### The star at Christ birth
 
 In Augustine's time there were those who held that Christ Himself had been "born under the decree of the stars," because of the statement in the Gospel according to Matthew that the Magi had seen His star in the east. Of this matter Augustine treats in several of his works. [^518:2] 
 
@@ -259,7 +266,7 @@ Augustine further affirms that the star did not cause Christ to live a marvelous
 
 But these rhetorical flourishes and antitheses seem to attest rather than dispute the significance of celestial phenomena, so that Augustine cannot be said to have answered the astrological contention anent Christ's birth very satisfactorily. 
 
-### Nature of the stars.
+### Nature of the stars
 
 The problem of the nature of the stars is one which Augustine prefers to leave unsolved, although it comes up several times in his writings. [^519:1] Whether they are simply lucid bodies without sense or intelligence, as some think; or have happy intellectual souls of their own, as Plato taught; whether they are to be classed with the Seats, Dominions, Principalities, and Powers of whom the apostle speaks; and whether they are ruled and animated by spirits : all these are questions which Augustine puts, but concerning whose answers he feels uncertain. His fullest discussion of the matter is in a letter against the Priscillian- ists to which we now come. 
 
@@ -275,7 +282,7 @@ Like the astrologers, continues Orosius, Priscillian associated the signs of the
 
  [^520:1]: This charge was later repeated by St. Leo, Epistola XV; see Withington, _History of Medicine_, 1894, p. 178; but the offense would seem a trivial one in any case. 
 
-### Augustine's letter.
+### Augustine letter.
 
 Augustine in his reply states that we can see that the sun, moon, and stars are celestial bodies, but not that they are animated. He agrees firmly with Paul that there are Seats, Dominions, Principalities, and Powers in the heavens, "but I do not know what they are or what the difference is between them." On the whole, Augustine is inclined to regard this state of ignorance as a blissful one. He is somewhat troubled by the verses in the Book of Job, 
 
@@ -299,7 +306,7 @@ In another passage Augustine is somewhat perturbed by the assertion of astronome
 
  [^521:3]: _De Genesi_ ad litteram, II, 16, in Migne, 34, 277. 
 
-### Perfect numbers.
+### Perfect numbers
  
 Augustine himself, however, was not above occupying his readers' time with discussion of the occult significance of numbers, towards belief in which he shows himself inclined. Six was a perfect number in his estimation, since God had created the world in six days, although He might have taken less or more time; and the Psalmist made no idle remark in saying that the Deity had ordered all things according to measure, number, and weight. Also six is the first number which can be obtained from adding together its factors: one, two, and three. Augustine was going on to say that seven was also a perfect number, when he checked himself lest he digress at too great length and seem "too eager to display his smattering of science." Hence he merely added that one indication of seven's perfection was its composition of the first complete odd number, three, and the first complete even number, four. [^522:1] 
 
